# monorepo

./: .gitignore  Cargo.toml  README.md  go.mod  go.work.sum
.github/workflows/: go.yml
apps/gleam/advent_of_code_2023/: README.md  gleam.toml
apps/gleam/advent_of_code_2023/src/: advent_of_code_2023.gleam
apps/gleam/hello_world/src/: erlang_api.erl  hello_world.gleam
apps/gleam/nats_client/: README.md  gleam.toml  manifest.toml
apps/gleam/nats_client/src/: main.gleam  nats_client.gleam  nats_driver.gleam
apps/go/: go.mod  go.sum
apps/go/cmd/advent_of_code_2023/: main.go
apps/go/cmd/alert_generator/: main.go
apps/go/cmd/alert_reader/: main.go
apps/go/cmd/hello_world/: main.go
apps/go/cmd/kafka_reader/: main.go
apps/go/cmd/nats_listener/: main.go
apps/go/cmd/nats_producer/: main.go
apps/go/cmd/redis_client/: main.go
apps/go/cmd/weather_app/: main.go  place_entity.go  redis_handler.go  weather_api_handler.go
apps/go/configs/: config.yaml
apps/go/internal/advent_of_code_2023/: calibration_handler.go  interface.go  numbers.go  test_main.go  test_numbers.go  word_to_int.go
apps/go/internal/alert_generator/: alert_generator.go  publishInterface.go
apps/go/internal/alert_handler/: handler.go
apps/go/internal/nats_listener/: listener.go
apps/go/nats-client/: go.mod  main.go  reader.go
apps/go/pkg/alerts/alert_entity/: alert.go  alert_entity_test.go
apps/go/pkg/config_handler/: driver.go
apps/go/pkg/kafka_driver/: consumer.go  driver.go
apps/go/pkg/nats_driver/: driver.go  jetstream.go  pubsub.go
apps/go/productivity_tool/alert_generator/: go.mod  go.sum  main.go
apps/go/productivity_tool/occurance_tracker/: alert_handler.go  go.mod  go.sum  main.go
apps/go/productivity_tool/occurrence_tracker/: alert_handler.go  go.mod  go.mod_bkp  go.sum  main.go
apps/go/tcp_server/: go.mod  main.go
apps/rust/advent_of_code_2023/src/: main.rs  numbers.rs
apps/rust/hello_world/src/: main.rs
apps/rust/nats_client/: Cargo.toml
apps/rust/nats_client/src/: main.rs
apps/rust/one-bln-challange/: Cargo.toml
apps/rust/one-bln-challange/src/: main.rs
apps/rust/productivity_tool/alert_generator/: Cargo.toml
apps/rust/productivity_tool/alert_generator/src/: main.rs
apps/rust/productivity_tool/db_updater/: Cargo.toml
apps/rust/productivity_tool/db_updater/src/: main.rs
apps/rust/productivity_tool/occurrence_tracker/: Cargo.toml
apps/rust/productivity_tool/occurrence_tracker/src/: main.rs
apps/rust/productivity_tool/occurrence_tracker/src/handlers/: alert_handler.rs  alert_handler_services.rs  mod.rs
apps/rust/productivity_tool/occurrence_tracker/src/interfaces/: mod.rs  repo_interface.rs
apps/rust/productivity_tool/occurrency_tracker/: Cargo.toml
apps/rust/productivity_tool/occurrency_tracker/src/: alert_handler.rs  main.rs
apps/rust/productivity_tool/occurrency_tracker/src/handlers/: alert_handler.rs  mod.rs
apps/rust/productivity_tool/occurrency_tracker/src/interfaces/: repo_interface.rs
apps/rust/travel_advisor/: Cargo.toml
apps/rust/travel_advisor/src/: main.rs
apps/rust/weather_app/: Cargo.toml
apps/rust/weather_app/src/: config.rs  debug_messages.rs  main.rs  place_entity.rs  redis.rs  web_client.rs
apps/zig/advent_of_code_2023/: day1.zig
apps/zig/advent_of_code_2023/day1/.zig-cache/o/05009f33b6d7d4303d55675aeaad371c/: build
apps/zig/advent_of_code_2023/day1/.zig-cache/o/8e0451f008100b68e714a5d3fff2d758/: build
apps/zig/advent_of_code_2023/day1/src/: main.zig
apps/zig/advent_of_code_2023/day2/.zig-cache/o/59d8769e09341ae1e56a2793c43586de/: build
apps/zig/advent_of_code_2023/day2/.zig-cache/o/64c91f92bc2f5216838b1c0f556ee4aa/: build
apps/zig/alert_entity/: alert.zig
apps/zig/hello_world/: hello.zig
apps/zig/web_server/: build.zig  build.zig.zon
apps/zig/web_server/.zig-cache/o/0c31fcd41d22d225e2bd629abf0d95b1/: build
apps/zig/web_server/.zig-cache/o/3aebb287ee2d83d8bb1dd50c9908dc90/: build
apps/zig/web_server/.zig-cache/o/675831c693d394e39170fde2b657614b/: test
apps/zig/web_server/src/: main.zig
dockerfiles/: Dockerfile-alert-generator-rust  Dockerfile-alert_generator_go  Dockerfile-alert_generator_rust  Dockerfile-db-updater-rust  Dockerfile-occurrence-handler  Dockerfile-occurrence-handler-rust  Dockerfile-occurrency-handler_rust  docker-compose.yaml
infrastructure/: Makefile
libs/go/: tmp
libs/go/alert_entity/: alert.go  go.mod
libs/go/env_var/: driver.go  go.mod  go.sum
libs/go/kafka_driver/: driver.go  go.mod  go.sum
libs/go/nats_driver/: client.go  go.mod
libs/rust/alert_entity/: Cargo.toml
libs/rust/alert_entity/src/: lib.rs
libs/rust/env_loader/: Cargo.toml  README.md
libs/rust/env_loader/src/: lib.rs
libs/rust/es-driver/: Cargo.toml
libs/rust/es-driver/src/: lib.rs
libs/rust/event_entity/: Cargo.toml
libs/rust/event_entity/src/: lib.rs
libs/rust/kafka_driver/: Cargo.toml
libs/rust/kafka_driver/src/: lib.rs
libs/rust/kafka_driver_v2/: Cargo.toml
libs/rust/kafka_driver_v2/src/: lib.rs
libs/rust/nats_driver/: Cargo.toml  documentation.md
libs/rust/nats_driver/src/: lib.rs
libs/rust/nats_driver_v2/: Cargo.toml
libs/rust/nats_driver_v2/src/: connection.rs  lib.rs  nats_conn_client.rs  nats_context.rs  nats_jet_stream.rs  nats_store.rs  nats_stream.rs
libs/rust/repository/src/: lib.rs
tests/: alert_entity_test.go  env_var_test.go  go.mod  go.sum
