[package]
name = "travel_advisor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
kuchiki = "0.8.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
log = "0.4.22"
teloxide = { version = "0.13.0", features = ["macros"] }
pretty_env_logger = "0.5.0"