[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka_driver = { path = "../../../libs/rust/kafka_driver" }
kafka_driver_v2 = { path = "../../../libs/rust/kafka_driver_v2" }
env_loader = { path = "../../../libs/rust/env_loader" }
log = { version = "0.4" }
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.12.7", features = ["json"] }
futures = "0.3.30"
redis = "0.27.2"
