[package]
name = "alert_entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sha2 = "0.11.0-pre.3"
serde = {workspace = true, features = ["derive"] }
serde_json = "1.0.113"
log = {workspace = true}
