[package]
name = "event_entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alert_entity = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
