[package]
name = "event_entity"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#alert_entity = { workspace = true }
#serde = { workspace = true, features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
alert_entity = { path = "../alert_entity" }
