[package]
name = "alert_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.11" }
alert_entity = { path = "../../../../libs/rust/alert_entity" }
kafka_driver = { path = "../../../../libs/rust/kafka_driver" }
env_loader = { path = "../../../../libs/rust/env_loader" }
nats_driver = { path = "../../../../libs/rust/nats_driver" }
log = { version = "0.4" }
futures = "0.3.30"
async-nats = "0.34.0"
bytes = "1.5.0"