[package]
name = "db_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
es-driver = {workspace = true}
env_loader = {workspace = true}
alert_entity = {workspace = true}
event_entity = {workspace = true}
kafka_driver = { workspace = true}
reqwest = { version = "0.11.24", features = ["json"] }
tokio = {version = "1.36.0", features = ["full"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"