[package]
name = "occurrence_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#resolver = "2"
[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
env_loader = { path = "../../../../libs/rust/env_loader" }
kafka_driver = { path = "../../../../libs/rust/kafka_driver" }
alert_entity = { path = "../../../../libs/rust/alert_entity" }
repository = { path = "../../../../libs/rust/repository" }
event_entity = { path = "../../../../libs/rust/event_entity" }
es-driver = { path = "../../../../libs/rust/es-driver" }
nats_driver = { path = "../../../../libs/rust/nats_driver" }
nats_driver_v2 = { path = "../../../../libs/rust/nats_driver_v2" }
log = "0.4.21"
env_logger = "0.11.2"
bytes = "1.5.0"
futures = "0.3.30"
futures-util = "0.3.30"
