[package]
name = "occurrency_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
resolver = "2"
[dependencies]
env_loader = { workspace = true }
kafka_driver = { workspace = true}
alert_entity = {workspace = true}
event_entity = {workspace = true}
repository = { workspace = true}
log = "0.4.20"
env_logger = "0.11.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
cargo-hakari = "0.9.29"
